--- a/ansible/roles/n8n/templates/env.j2
+++ b/ansible/roles/n8n/templates/env.j2
@@ -1,4 +1,21 @@
-# Environment variables for n8n stack
-POSTGRES_USER={{ postgres_user }}
-POSTGRES_PASSWORD={{ postgres_password }}
-POSTGRES_DB={{ postgres_db }}
+N8N_HOST={{ n8n_domain }}
+N8N_PORT=5678
+N8N_PROTOCOL={{ n8n_protocol }}
+WEBHOOK_URL={{ n8n_protocol }}://{{ n8n_domain }}/
+N8N_EDITOR_BASE_URL={{ n8n_protocol }}://{{ n8n_domain }}/
+GENERIC_TIMEZONE={{ n8n_timezone }}
+
+N8N_ENCRYPTION_KEY={{ n8n_encryption_key }}
+N8N_SECURE_COOKIE={{ (n8n_secure_cookie | bool) | ternary('true','false') }}
+N8N_PROXY_HOPS=1
+
+N8N_BASIC_AUTH_ACTIVE={{ (n8n_basic_auth_active | bool) | ternary('true','false') }}
+N8N_BASIC_AUTH_USER={{ n8n_basic_auth_user }}
+N8N_BASIC_AUTH_PASSWORD={{ n8n_basic_auth_password }}
+
+DB_TYPE=postgresdb
+DB_POSTGRESDB_HOST=postgres
+DB_POSTGRESDB_PORT=5432
+DB_POSTGRESDB_DATABASE={{ postgres_db }}
+DB_POSTGRESDB_USER={{ postgres_user }}
+DB_POSTGRESDB_PASSWORD={{ postgres_password }}
